# cookiedough

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  bypasszs-ascii.txt  cmake_install.cmake  plastic.txt  rocket-track-guide.txt  to do.txt
VS/: .gitignore  cookiedough.vcxproj  cookiedough.vcxproj.filters
VS12-deprecated/: cookiedough.sln  cookiedough.vcxproj
VS17/: VS17.sln  VS17.vcxproj  VS17.vcxproj.filters
VS17-VS19/: VS17.vcxproj  VS17.vcxproj.filters  cookiedough.sln
code/: CMakeLists.txt  alloc-aligned.h  audio-bassmod.cpp  audio.cpp  audio.h  ball.cpp  ball.h  bilinear.h  bit-tricks.h  boxblur.cpp  boxblur.h  clonetunnels.cpp  clonetunnels.h  cspan.h  demo.cpp  demo.h  display.cpp  display.h  fast-cosine.cpp  fast-cosine.h  fx-blitter.cpp  fx-blitter.h  gamepad.cpp  gamepad.h  heartquake.cpp  heartquake.h  image.cpp  image.h  landscape.cpp  landscape.h  lens.cpp  lens.h  main.cpp  main.h  map-blitter.cpp  map-blitter.h  plasma.cpp  plasma.h  platform.h  polar.cpp  (+39 more)
code/FM-synthesizer/: FM_BISON.cpp  FM_BISON.h  LFOs.cpp  LFOs.h  OSX-test-16-10-2018.rar  SDL2-audio-out.cpp  SDL2-audio-out.h  Win-MIDI-in-BeatStep.cpp  Win-MIDI-in-BeatStep.h  Win-MIDI-in-Oxygen49.cpp  Win-MIDI-in-Oxygen49.h  controls.txt  core.cpp  core.h  design-0.2-NL.txt  design-goals.txt  design.txt  fast-tanhf.h  final-MOOG-ladder.h  global.h  manual.txt  random.h  sinus-LUT.cpp  sinus-LUT.h  synth-ADSR.cpp  synth-ADSR.h  synth-DX-voice.cpp  synth-DX-voice.h  synth-LFO.cpp  synth-LFO.h  synth-LFOs.cpp  synth-LFOs.h  synth-LUT.cpp  synth-LUT.h  synth-MOOG-ladder.cpp  synth-MOOG-ladder.h  synth-algorithm.h  synth-audio-out.h  synth-carrier.cpp  synth-carrier.h  (+43 more)
code/FM-synthesizer - 2/: FM_BISON.cpp  FM_BISON.h  SDL2-audio-out.cpp  Win-MIDI-in-BeatStep.cpp  Win-MIDI-in-BeatStep.h  Win-MIDI-in-Oxygen49.cpp  Win-MIDI-in-Oxygen49.h  synth-ADS.h  synth-ADSR.cpp  synth-ADSR.h  synth-DX-voice.cpp  synth-DX-voice.h  synth-FM-algorithms.cpp  synth-FM-algorithms.h  synth-Hexter-tables.h  synth-LUT.cpp  synth-LUT.h  synth-delay-line.h  synth-filter.cpp  synth-filter.h  synth-global.h  synth-log.cpp  synth-math.h  synth-midi.cpp  synth-midi.h  synth-oscillator.cpp  synth-oscillator.h  synth-parameters.h  synth-patch.h  synth-random.cpp  synth-ringbuffer.h  synth-stateless-oscillators.h  synth-vowel-filter.cpp  synth-vowel-filter.h
code/FM-synthesizer - 2/Renders for Bernd/: Steeldrum-BassRhodes.aup
code/FM-synthesizer - 2/Renders for Bernd/Steeldrum-BassRhodes_data/e08/d08/: e0808005.au  e080816a.au  e0808488.au  e0808904.au  e0808975.au  e0808b39.au  e0808d4c.au  e0808df0.au  e0808eae.au
code/FM-synthesizer - 3/: FM_BISON.cpp  FM_BISON.h  Win-MIDI-in-BeatStep.cpp  Win-MIDI-in-BeatStep.h  Win-MIDI-in-Oxygen49.cpp  Win-MIDI-in-Oxygen49.h  synth-ADSR.cpp  synth-ADSR.h  synth-DX-voice.cpp  synth-DX-voice.h  synth-DX7-LUT.cpp  synth-DX7-LUT.h  synth-FM-algorithms.cpp  synth-FM-algorithms.h  synth-LUT.cpp  synth-LUT.h  synth-MIDI.cpp  synth-MIDI.h  synth-Wurlitzer-grit.cpp  synth-Wurlitzer-grit.h  synth-chorus-mix.cpp  synth-chorus-mix.h  synth-delay-line.cpp  synth-delay-line.h  synth-dry-patch.h  synth-error.h  synth-fast-cosine.cpp  synth-fast-cosine.h  synth-global.h  synth-grit.cpp  synth-grit.h  synth-helper.h  synth-math.h  synth-one-pole.h  synth-oscillator.cpp  synth-oscillator.h  synth-parameters.h  synth-patch.h  synth-pickup-distortion.h  synth-pickup-model.h  (+12 more)
code/FM-synthesizer/OSX-test/: FM_BISON.cpp  FM_BISON.h  bevacqua-compat.h  changes.txt  makefile  random.cpp  sinus-LUT.cpp  sinus-LUT.h  synth-LFOs.cpp  synth-LFOs.h  synth-MOOG-ladder.cpp  synth-MOOG-ladder.h  synth-cosine-tilt.cpp  synth-cosine-tilt.h  synth-error.h  synth-global.h  synth-log.h  synth-midi.cpp  synth-modulator.h  synth-oscillators.cpp  synth-oscillators.h  synth-state.h  synth-vorticity.cpp  synth-vorticity.h  test.cpp
code/FM-synthesizer/OSX-test/bison.dSYM/Contents/: Info.plist
code/FM-synthesizer/wavetable/: 808-snare-drum-2.raw  E-Mu-Proteus-FX-AcStereo-C3.raw  Ensoniq-SD-1-Piano-C6.raw  Roland-JV-2080-Fantasia-C4.raw  Roland-JV-2080-SA-Rhodes-1-C4.raw  clean-808-kick_A_minor.raw  female-singing-voice.raw  guide.txt  guitar-G-major.raw  oscWav808.h  wavElecPiano.h  wavGuitar.h  wavKick808.h  wavSnare808.h
code/FM-synthesizer/wavetable/unused/: piano-A-major.raw  piano-C-major.raw  wavPiano.h
code/FM-synthesizer/website/: index.html
code/Std3DMath-stripped/: Dependencies.h  Hermite.h  Intersect.cpp  LICENSE  Matrix44.cpp  Matrix44.h  Quaternion.cpp  Quaternion.h  README.md  Vector2.h  Vector3.h  Vector4.h
code/deprecated/: boxblur.cpp  boxblur.h
code/retro3D/: primitives.h  retro3D.h  tri-filler.h
emoon-rocket/: .gitignore  editor-arm64
misc/: Kalms' 1-pass voxel ball explanation.txt  burra_src.rar
rocket-tracks/: backup-03-17.rocket  backup-03-18.rocket  backup-03-20.rocket  backup-03-23.rocket  backup-03-25-V2.rocket  backup-03-25.rocket  backup-03-26.rocket  ball-rnd-01.rocket  beam-ball-test.rocket  directors-cut.rocket  first-timeline-filler-07-02-2023.rocket  jade-last-7-2.rocket  latest-170-bpm.rocket  latest-170-final-2.rocket  latest-170-final-3.rocket  latest-170-final.rocket  latest-170-kusma.rocket  latest-170-nytrik-V2-edited-by-plek.rocket  latest-170-nytrik-V2.rocket  latest-170-nytrik-edited-by-plek.rocket  latest-170-nytrik.rocket  latest-170-superplek-and-nytrik-V4.rocket  latest-170-superplek-on-speed.rocket  latest-170-superplek.rocket  latest-backup.rocket  latest.rocket  nytrik-ball-test.rocket  sync-06-02-1800.rocket  timeline-07-02-1600.rocket  timeline-07-02-1734.rocket
rocket-tracks/old/: first-timeline-filler-07-02-2023.rocket  timeline-filler-07-02-2023-v2.rocket  timeline-filler-07-02-2023-v3.rocket  timeline-filler-07-02-2023-v4.rocket
shaderGP-detour/: snatchtiler.h
shaderGP2019-hacks/: snatchtiler.cpp
sync-tracks/: bevacqua.rocket  keito-timeline-alpha-1.rocket  laura-test.rocket  param-test.rocket  sinuses-and-spike-test.rocket  spike-test.rocket
sync-tracks-0.1/: bevacqua.rocket
(+32 files in other folders)
